# Bact-Evolution

./: Bacteria.cpp  Bacteria.h  CMakeLists.txt  Cell.cpp  Cell.h  Coordinates.cpp  Coordinates.h  Ga.cpp  Ga.h  Gb.cpp  Gb.h  Grid.cpp  Grid.h  PortraitDePhase.R  README.md  Simulation.cpp  Simulation.h  SimulationOutputspmut0.csv  SimulationOutputspmut0001.csv  exe.cpp  portraitPhase.R  testsElise.cpp  testsGuillaume.cpp  testsHana.cpp
